--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   app:
     image: 'node'
-    command: bash -c 'npm install && npm run startTsNode'
+    command: bash -c 'npm install && npm run startTs'
     ports:
       - '3000:3000'
     working_dir: '/hostdir'
