--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "startTs": "ts-node src/App.ts",
     "test": "TS_NODE_PROJECT='./tsconfig.test.json' mocha -r ts-node/register \"test/**/*.test.ts\"",
     "build": "rm -rf app && tsc",
-    "demoData": "ts-node createDemoData.ts"
+    "demoData": "ts-node createDemoData.ts",
+    "lint": "eslint . --ext .ts",
+    "fix": "eslint . --fix --ext .ts"
   },
   "dependencies": {
-    "@types/pg": "^7.14.11",
     "@types/ws": "^6.0.4",
     "coderitter-api-postonly-request": "^1.0.2",
     "coderitter-api-remote-method-api": "^6.0.0",
@@ -20,18 +21,18 @@
     "knight-json": "^1.0.1",
     "knight-log": "^1.0.0",
     "knight-orm": "^0.1.0",
-    "knight-pg-migration": "^1.0.0",
-    "knight-pg-transaction": "^1.0.1",
     "knight-validation": "^1.0.0",
-    "pg": "^8.5.1",
     "ws": "^7.4.5"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/mocha": "^5.2.7",
     "@types/node": "^13.13.36",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "chai": "^4.2.0",
-    "mocha": "^6.2.3",
+    "eslint": "^8.2.0",
+    "mocha": "^9.1.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
