--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,14 +9,14 @@ services:
     command: bash -c 'npm install && npm run build && npm start'
     environment: 
         - MODE=prod
-    # depends_on: 
-    #     - db
-  # db:
-  #   image: 'postgres'
-  #   environment:
-  #     - POSTGRES_DB=coderitter_prod
-  #     - POSTGRES_USER=coderitter_prod
-  #     - POSTGRES_PASSWORD=1234
+    depends_on: 
+        - db
+  db:
+    image: 'postgres'
+    environment:
+      - POSTGRES_DB=coderitter_prod
+      - POSTGRES_USER=coderitter_prod
+      - POSTGRES_PASSWORD=1234
 networks:
   publicNet:
     external: true
