--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fix": "eslint . --fix --ext .ts"
   },
   "dependencies": {
+    "@types/pg": "^7.14.11",
     "@types/ws": "^6.0.4",
     "coderitter-api-postonly-request": "^1.0.2",
     "coderitter-api-remote-method-api": "^6.0.0",
@@ -21,7 +22,10 @@
     "knight-json": "^1.0.1",
     "knight-log": "^1.0.0",
     "knight-orm": "^0.1.0",
+    "knight-pg-migration": "^1.0.0",
+    "knight-pg-transaction": "^1.0.1",
     "knight-validation": "^1.0.0",
+    "pg": "^8.5.1",
     "ws": "^7.4.5"
   },
   "devDependencies": {
@@ -32,7 +36,7 @@
     "@typescript-eslint/parser": "^5.3.1",
     "chai": "^4.2.0",
     "eslint": "^8.2.0",
-    "mocha": "^9.1.3",
+    "mocha": "^6.2.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
