ADD database mariaDB to coderitter-api-server

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,13 +1,14 @@
 version: '3.7'
 services:
-  # dbtest:
-  #   image: 'postgres'
-  #   environment:
-  #     - POSTGRES_DB=coderitter_test
-  #     - POSTGRES_USER=coderitter_test
-  #     - POSTGRES_PASSWORD=1234
-  #   networks:
-  #     - coderittertest
+  dbtest:
+    image: 'mariadb'
+    environment:
+      - MYSQL_PASSWORD=1234
+      - MARIADB_ROOT_PASSWORD=1234
+      - MYSQL_DATABASE=coderitter_test
+      - MYSQL_USER=coderitter_test
+    networks:
+      - coderittertest
 networks:
   coderittertest:
     external: true
