--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,14 +9,15 @@ services:
     command: bash -c 'npm install && npm run build && npm start'
     environment: 
         - MODE=prod
-    # depends_on: 
-    #     - db
-  # db:
-  #   image: 'postgres'
-  #   environment:
-  #     - POSTGRES_DB=coderitter_prod
-  #     - POSTGRES_USER=coderitter_prod
-  #     - POSTGRES_PASSWORD=1234
+    depends_on: 
+        - db
+  db:
+    image: 'mariadb'
+    environment:
+      - MYSQL_PASSWORD=1234
+      - MARIADB_ROOT_PASSWORD=1234
+      - MYSQL_DATABASE=coderitter_prod
+      - MYSQL_USER=coderitter_prod
 networks:
   publicNet:
     external: true
