--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,18 +10,19 @@ services:
       - './:/hostdir'
     environment: 
       - MODE=dev
-    # depends_on: 
-    #   - db
+    depends_on: 
+      - db
     networks:
       - coderitter
-  # db:
-  #   image: 'postgres'
-  #   environment:
-  #     - POSTGRES_DB=coderitter
-  #     - POSTGRES_USER=coderitter
-  #     - POSTGRES_PASSWORD=1234
-  #   networks: 
-  #     - coderitter
+  db:
+    image: 'mariadb'
+    environment:
+      - MYSQL_PASSWORD=1234
+      - MARIADB_ROOT_PASSWORD=1234
+      - MYSQL_DATABASE=coderitter
+      - MYSQL_USER=coderitter
+    networks: 
+      - coderitter
 networks:
   coderitter:
     external: true
