--- a/package.json
+++ b/package.json
@@ -5,35 +5,41 @@
   "scripts": {
     "start": "node ./app/App.js",
     "startTs": "ts-node src/App.ts",
-    "test": "TS_NODE_PROJECT='./tsconfig.test.json' mocha -r ts-node/register \"test/**/*.test.ts\"",
+    "test": "cross-env TS_NODE_PROJECT='./tsconfig.test.json' mocha -r ts-node/register \"test/**/*.test.ts\"",
     "build": "rm -rf app && tsc",
     "demoData": "ts-node createDemoData.ts",
     "lint": "eslint . --ext .ts",
     "fix": "eslint . --fix --ext .ts"
   },
   "dependencies": {
+    "@types/mysql": "^2.15.19",
     "@types/ws": "^6.0.4",
     "coderitter-api-postonly-request": "^1.0.2",
     "coderitter-api-remote-method-api": "^6.0.0",
     "coderitter-api-remote-method-call": "^4.0.1",
+    "cross-env": "^7.0.3",
     "knight-change": "^1.0.0",
     "knight-criteria": "^1.0.0",
     "knight-json": "^1.0.1",
-    "knight-log": "^1.0.0",
-    "knight-orm": "^0.1.0",
+    "knight-log": "^1.0.6",
+    "knight-maria-migration": "^0.0.1",
+    "knight-maria-transaction": "^0.0.1",
+    "knight-orm": "^0.1.1",
     "knight-validation": "^1.0.0",
+    "mariadb": "^2.5.5",
     "ws": "^7.4.5"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.1",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^13.13.36",
+    "@types/node": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "chai": "^4.2.0",
     "eslint": "^8.2.0",
     "mocha": "^9.1.3",
-    "ts-node": "^8.10.2",
+    "ts-node": "^8.0.0",
     "typescript": "^3.9.7"
   }
 }
