--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.7'
+version: '3.8'
 services:
   app:
-    image: 'node'
+    image: 'node:16.13.1'
     command: bash -c 'npm install && npm run startTs'
     ports:
       - '3000:3000'
