--- a/package.json
+++ b/package.json
@@ -13,20 +13,18 @@
   },
   "dependencies": {
     "@types/mysql": "^2.15.19",
-    "@types/ws": "^6.0.4",
     "coderitter-api-remote-method-api": "^6.0.0",
     "coderitter-api-remote-method-call": "^4.0.1",
     "cross-env": "^7.0.3",
-    "knight-change": "^1.0.0",
+    "knight-change": "^2.0.0",
     "knight-criteria": "^2.0.7",
     "knight-json": "^1.0.1",
     "knight-log": "^1.0.6",
     "knight-maria-migration": "^0.0.1",
     "knight-maria-transaction": "^0.0.2",
-    "knight-orm": "^0.3.1",
+    "knight-orm": "^0.4.0",
     "knight-validation": "^1.1.0",
-    "mariadb": "^2.5.5",
-    "ws": "^7.4.5"
+    "mariadb": "^2.5.5"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
